checking serialization of chars

--- a/src/main/resources/com/stormtale/stormtale/main-view.fxml
+++ b/src/main/resources/com/stormtale/stormtale/main-view.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.TextFlow?>
 
 <GridPane fx:id="MainGrid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.stormtale.stormtale.Controllers.MainController">
@@ -48,5 +49,10 @@
             </Pane>
          </content>
       </ScrollPane>
+      <VBox fx:id="ProfileBox" prefWidth="300.0" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets top="30.0" />
+         </GridPane.margin>
+      </VBox>
     </children>
 </GridPane>
