--- a/src/main/resources/com/stormtale/stormtale/main-view.fxml
+++ b/src/main/resources/com/stormtale/stormtale/main-view.fxml
@@ -49,9 +49,9 @@
             </Pane>
          </content>
       </ScrollPane>
-      <VBox fx:id="ProfileBox" prefWidth="300.0" GridPane.valignment="TOP">
+      <VBox fx:id="ProfileBox" fillWidth="false" prefWidth="300.0" spacing="15.0" GridPane.valignment="TOP">
          <GridPane.margin>
-            <Insets top="30.0" />
+            <Insets left="25.0" top="25.0" />
          </GridPane.margin>
       </VBox>
     </children>
